Fix grid and flex layouts on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ main {
     display: grid;
     grid-auto-flow: row;
     grid-template-rows: auto;
-    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-content: center;
     gap: 25px 40px;
 }
